# SignalRetention

./: .gitignore  README.md  pyrightconfig.json
backend/: docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/db/: database.py  redis.py
backend/app/dependencies/: auth.py  database.py
backend/app/models/: customer.py  dataset.py  prediction.py  recommendation.py  simulation.py  user.py
backend/app/repositories/: customer_repository.py  dataset_repository.py  prediction_repository.py  recommendation_repository.py  simulation_repository.py  user_repository.py
backend/app/schemas/: auth.py  customer.py  dashboard.py  dataset.py  prediction.py  recommendation.py  simulation.py  user.py
backend/app/services/: auth_service.py  cache_service.py  customer_service.py  dashboard_service.py  dataset_service.py  ml_service.py  prediction_service.py  recommendation_service.py  simulation_service.py  storage_service.py  upload_service.py  user_service.py  validation_service.py
backend/app/storage/: gcs.py
backend/migrations/: env.py
backend/migrations/versions/: 55be594f3b70_create_core_tables.py
ml-service/: README.md  pyproject.toml
ml-service/src/: config.py  cross_validate.py  evaluate.py  explain.py  hyperparameter_tuning.py  inference.py  load_data.py  main.py  model_loader.py  predict.py  preprocessing.py  recommendations.py  train.py
ml-service/tests/: test_explain.py  test_predict.py  test_processing.py  test_recommendations.py
(+57 files in other folders)
