[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.0",
    "google-cloud-storage>=3.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=2.3.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.3.0",
]

[tool.uv]
override-dependencies =[
    "llvmlite>=0.44.0",
    "numba>=0.59.0",
    "shap>=0.46.0",
]
